--- a/src/index.css
+++ b/src/index.css
@@ -1,13 +1,151 @@
+@import url('https://fonts.googleapis.com/css2?family=Montserrat&family=Ubuntu:wght@300;400;500;700&display=swap');
+
+html,
 body {
+  width: 100%;
+  height: 100%;
+  padding: 0;
   margin: 0;
-  font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
-    'Ubuntu', 'Cantarell', 'Fira Sans', 'Droid Sans', 'Helvetica Neue',
-    sans-serif;
+  -webkit-box-sizing: border-box;
+  box-sizing: border-box;
+}
+
+body {
+  font-family: "Montserrat", Arial, sans-serif;
+  font-weight: normal;
+  font-style: normal;
+  /* color: #fff; */
+  line-height: 1.42;
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
 }
 
-code {
-  font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New',
-    monospace;
+*,
+*:before,
+*:after {
+  -webkit-box-sizing: border-box;
+  box-sizing: border-box;
+}
+
+h1,
+h2,
+h3,
+h4,
+h5,
+h6 {
+  margin: 0;
+  font-weight: normal;
+}
+
+ul {
+  margin: 0px;
+  padding: 0px;
+}
+
+ul li {
+  list-style: none;
+}
+
+button {
+  border: none;
+  background: transparent;
+  cursor: pointer;
+  font-family: "ubuntu", Arial, sans-serif;
+  font-weight: normal;
+  font-style: normal;
+  /* color: #fff; */
+  -webkit-font-smoothing: antialiased;
+  -moz-osx-font-smoothing: grayscale;
+  width: 75px;
+}
+
+#root {
+  height: 100%;
+}
+
+.wrapper {
+  width: 100%;
+  min-width: 300px;
+  height: 100%;
+  position: relative;
+  overflow: hidden;
+  background-color: rgb(52, 221, 227);
+}
+
+.todo {
+  margin: 5% auto 0;
+  padding: 10px;
+  width: 30%;
+  min-width: 400px;
+  border-radius: 5px;
+  background-color: rgb(252, 121, 227);
+  display: flex;
+  flex-direction: column;
+}
+
+.todo__title {
+  font-size: 18px;
+  text-align: center;
+  margin-bottom: 10px;
+}
+
+.todo__input {
+  display: flex;
+  margin-bottom: 5px;
+}
+
+.input__task {
+  flex: 1;
+  height: 25px;
+  margin-right: 5px;
+  border: none;
+  border-radius: 2px;
+}
+
+.add__task {
+  border-radius: 2px;
+  background-color: rgb(99, 240, 151);
+  height: 25px;
+
+}
+
+.todo__list {
+  display: flex;
+  flex-direction: column;
+}
+
+.todo__item {
+  display: flex;
+  margin-bottom: 5px;
+  align-items: center;
+}
+
+.active {
+  background-color: rgb(213, 172, 206);
+}
+
+.todo__text {
+  min-height: 25px;
+  flex: 1;
+  max-width: 71%;
+  word-break: break-all;
+  margin-right: 5px;
+  border-radius: 2px;
+  padding-left: 2px;
+  border: solid white;
+}
+
+.todo__complete {
+  margin: 0;
+  margin-right: 5px;
+  width: 25px;
+  height: 25px;
+  outline: none;
+}
+
+.delete__task {
+  height: 25px;
+  border-radius: 2px;
+  background-color: rgb(239, 55, 55);
+
 }
