--- a/src/index.css
+++ b/src/index.css
@@ -60,92 +60,17 @@ button {
 }
 
 #root {
-  height: 100%;
-}
-
-.wrapper {
-  width: 100%;
-  min-width: 300px;
-  height: 100%;
-  position: relative;
-  overflow: hidden;
-  background-color: rgb(52, 221, 227);
-}
-
-.todo {
-  margin: 5% auto 0;
-  padding: 10px;
-  width: 30%;
-  min-width: 400px;
-  border-radius: 5px;
-  background-color: rgb(252, 121, 227);
   display: flex;
-  flex-direction: column;
+  min-height: 100%;
 }
 
-.todo__title {
-  font-size: 18px;
-  text-align: center;
-  margin-bottom: 10px;
-}
 
-.todo__input {
-  display: flex;
-  margin-bottom: 5px;
-}
 
-.input__task {
-  flex: 1;
-  height: 25px;
-  margin-right: 5px;
-  border: none;
-  border-radius: 2px;
-}
 
-.add__task {
-  border-radius: 2px;
-  background-color: rgb(99, 240, 151);
-  height: 25px;
 
-}
 
-.todo__list {
-  display: flex;
-  flex-direction: column;
-}
 
-.todo__item {
-  display: flex;
-  margin-bottom: 5px;
-  align-items: center;
-}
 
-.active {
-  background-color: rgb(213, 172, 206);
-}
 
-.todo__text {
-  min-height: 25px;
-  flex: 1;
-  max-width: 71%;
-  word-break: break-all;
-  margin-right: 5px;
-  border-radius: 2px;
-  padding-left: 2px;
-  border: solid white;
-}
 
-.todo__complete {
-  margin: 0;
-  margin-right: 5px;
-  width: 25px;
-  height: 25px;
-  outline: none;
-}
 
-.delete__task {
-  height: 25px;
-  border-radius: 2px;
-  background-color: rgb(239, 55, 55);
-
-}
