layout sort find

--- a/src/ulbi/Finder/Finder.module.css
+++ b/src/ulbi/Finder/Finder.module.css
@@ -1,8 +1,8 @@
 .todo {
-  margin: 5% auto;
+  margin: 5% auto 0%;
   padding: 10px;
-  width: 30%;
-  min-width: 400px;
+  min-width: 100%;
+  border: 1px white solid;
   border-radius: 5px;
   background-color: rgb(252, 121, 227);
   display: flex;
@@ -23,7 +23,6 @@
 .input__task {
   flex: 1;
   height: 25px;
-  margin-right: 5px;
   border: none;
   border-radius: 2px;
 }
