--- a/src/ulbi/ToDoInput/ToDoInput.module.css
+++ b/src/ulbi/ToDoInput/ToDoInput.module.css
@@ -1,8 +1,8 @@
 .todo {
-  margin: 5% auto;
+  margin: 5% auto 0;
   padding: 10px;
-  width: 30%;
-  min-width: 400px;
+  min-width: 100%;
+  border: 1px white solid;
   border-radius: 5px;
   background-color: rgb(252, 121, 227);
   display: flex;
@@ -32,9 +32,4 @@
   border-radius: 2px;
   background-color: rgb(99, 240, 151);
   height: 25px;
-}
-
-.todo__list {
-  display: flex;
-  flex-direction: column;
 }
