--- a/src/ulbi/Wrapper/Wrapper.module.css
+++ b/src/ulbi/Wrapper/Wrapper.module.css
@@ -8,3 +8,13 @@
   background-color: rgb(52, 221, 227);
 }
 
+.wrapper__inner {
+  margin: 5% auto;
+  padding: 10px;
+  width: 30%;
+  min-width: 400px;
+  border-radius: 5px;
+  background-color: rgb(252, 121, 227);
+  display: flex;
+  flex-direction: column;
+}
