--- a/src/withHooks/Finder/Finder.module.css
+++ b/src/withHooks/Finder/Finder.module.css
@@ -1,29 +1,8 @@
-
-
-.wrapper {
-  width: 100%;
-  min-width: 300px;
-  min-height: 100%;
-  position: relative;
-  background-color: rgb(52, 221, 227);
-}
-
-.wrapper__inner {
-  margin: 5% auto;
-  padding: 10px;
-  width: 30%;
-  min-width: 400px;
-  border-radius: 5px;
-  background-color: rgb(252, 121, 227);
-  display: flex;
-  flex-direction: column;
-}
-
 .todo {
-  margin: 5% auto;
+  margin: 5% auto 0%;
   padding: 10px;
-  width: 30%;
-  min-width: 400px;
+  min-width: 100%;
+  border: 1px white solid;
   border-radius: 5px;
   background-color: rgb(252, 121, 227);
   display: flex;
@@ -44,14 +23,13 @@
 .input__task {
   flex: 1;
   height: 25px;
-  margin-right: 5px;
   border: none;
   border-radius: 2px;
 }
 
 .add__task {
   border-radius: 2px;
-  background-color: rgb(99, 240, 151);
+  background-color: rgb(240, 200, 99);
   height: 25px;
 }
 
